bug fix - button icons in the right menu were displayed with distortions

--- a/habit_tracker/styles/main.css
+++ b/habit_tracker/styles/main.css
@@ -202,7 +202,7 @@ input::placeholder {
     left: 45px;
 }
 
-button {
+.button {
     background: #EDECFE;
     border-radius: 9px;
     border: none;
@@ -212,6 +212,6 @@ button {
     cursor: pointer;
 }
 
-button:hover {
+.button:hover {
     background: #DCDAFF;
 }
